--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,36 @@
 
     <body>
         <h1>Lasagna</h1>
+
+        <img src="../images/lasagna.jpg" alt="lasagna" height="250" width="500">
+
+        <h2>Description</h2>
+        <p>Lasagna is a classic Italian dish that is made up of layers of pasta, meat sauce, and cheese. The dish is typically baked in the oven until the cheese is melted and bubbly. There are many variations of lasagna, but the most common ingredients include ground beef, tomato sauce, ricotta cheese, and mozzarella cheese. Some recipes also call for the addition of vegetables such as spinach or zucchini.</p>
+        <p>Lasagna is a hearty and filling dish that is perfect for family dinners or special occasions. It is a crowd-pleaser that can be made ahead of time and reheated for convenience. The dish is also versatile and can be customized to suit different tastes and preferences. For example, vegetarians can substitute the meat with vegetables such as mushrooms or eggplant. Additionally, the dish can be made with different types of pasta such as gluten-free or whole wheat noodles.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound lean ground beef</li>
+            <li>1 egg, beaten</li>
+            <li>15 ounces part-skim ricotta cheese</li>
+            <li>1/4 cup chopped fresh parsley</li>
+            <li>2 1/2 cups KRAFT Shredded Low-Moisture Part-Skim Mozzarella Cheese, divided</li>
+            <li>24 ounces CLASSICO Tomato and Basil Pasta Sauce</li>
+            <li>1 cup water</li>
+            <li>12 lasagna noodles, uncooked</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 375°F.</li>
+            <li>Brown 1 pound of lean ground beef in a large skillet over medium-high heat. Drain the fat.</li>
+            <li>Stir in 24 ounces of CLASSICO Tomato and Basil Pasta Sauce and 1 cup of water. Bring to a boil, then reduce the heat and simmer for 10 minutes.</li>
+            <li>In a separate bowl, mix together 15 ounces of part-skim ricotta cheese, 1 beaten egg, and 1/4 cup of chopped fresh parsley.</li>
+            <li>Spread 1 cup of the meat sauce in the bottom of a 13x9-inch baking dish. Top with 3 uncooked lasagna noodles, 1/3 of the ricotta mixture, and 1 cup of KRAFT Shredded Low-Moisture Part-Skim Mozzarella Cheese. Repeat the layers twice.</li>
+            <li>Top with the remaining meat sauce and 1/4 cup of KRAFT Grated Parmesan Cheese.</li>
+            <li>Cover the dish with foil and bake for 45 minutes. Remove the foil and bake for an additional 15 minutes or until the cheese is melted and bubbly.</li>
+        </ol>
+
+        <h3><em>Enjoy your dish!</em></h3>
     </body>
 </html>
