Finish page content of pasta-alla-norma.html Fix my first bug "image not able to display in second recipe"
Add steps and ending to pasta-alla-norma.html and fix bug. Bug happened
'cause i had added an extra / to the anchor tag linking the home and
the second recipe page causing it to need three dots to access the
image.

--- a/recipes/pasta-alla-norma.html
+++ b/recipes/pasta-alla-norma.html
@@ -9,6 +9,8 @@
     <body>
         <h1>Pasta Alla Norma</h1>
 
+            <img src="../images/pasta.jpg" alt="pasta" width="498" height="332">
+
             <h2>Description</h2>
                 <p>Pasta alla Norma is a classic Sicilian pasta dish that is made with eggplant, tomatoes, basil, and ricotta salata. The dish is named after the opera “Norma” by Vincenzo Bellini, and it is said that the dish was created in honor of the composer. The recipe requires rigatoni pasta, eggplant, garlic, canned tomatoes, fresh basil, ricotta salata, and olive oil. The preparation time is 15 minutes, and the cooking time is 30 minutes.</p>
                 <p>Pasta alla Norma is a delicious and hearty vegetarian dish that is perfect for a cozy dinner at home. The combination of tender eggplant, tangy tomato sauce, and salty ricotta salata creates a flavor explosion in your mouth. The dish is easy to make and can be customized to suit your taste preferences. You can add more garlic or spice it up with red pepper flakes. You can also substitute the rigatoni pasta with any other pasta of your choice.</p>
@@ -27,6 +29,17 @@
                     <li>1/2 cup basil, torn</li>
                     <li>1/2 cup ricotta salata, crumbled</li>
                 </ul>
-            
+
+            <h2>Steps</h2>
+                <ol>
+                    <li>Trim the eggplant and partially peel them in a striped pattern (zebra pattern). Slice them into 1/2-inch rounds and sprinkle with kosher salt. Let them sit for 30 minutes to release excess water.</li>
+                    <li>Preheat the oven to 425 degrees F. Brush the bottom of a large sheet pan with extra-virgin olive oil. Arrange the eggplant slices on the sheet pan in one single layer. Roast the eggplant for 20-25 minutes, or until golden brown.</li>
+                    <li>In a large frying pan, brown the garlic with a drizzle of extra-virgin olive oil. Add a few torn basil leaves, the crushed tomatoes, Italian seasoning blend, and a pinch of salt. Cook the sauce for 15 minutes, stirring occasionally.</li>
+                    <li>Cook the pasta in a pan of heavily salted boiling water for 8-10 minutes, or as per packet instructions.</li>
+                    <li>Drain the pasta and add it to the tomato sauce. Add the eggplant and toss so the pasta is evenly coated in the sauce.</li>
+                    <li>Garnish with crumbled ricotta salata and torn basil leaves.</li>
+                </ol>
+
+            <h3><em>Enjoy your dish!</em></h3>
     </body>
 </html>
