--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/pasta-alla-norma.html">Pasta Alla Norma</a></li>
+            <li><a href="recipes/gnocchi.html">Gnocchi</a></li>
         </ul>
         
     </body>
