Add back to top and back to homepage links to all recipe pages, add homepage banner image and some text to homepage heading, add concluded experience to README.md

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Odin Recipes - Italian Restaurant</h1>
 
-        <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/pasta-alla-norma.html">Pasta Alla Norma</a></li>
-            <li><a href="recipes/gnocchi.html">Gnocchi</a></li>
-        </ul>
+            <img src="images/homepage-banner.jpg" alt="homepage-banner" width="500" height="397">
+
+            <ul>
+                <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="recipes/pasta-alla-norma.html">Pasta Alla Norma</a></li>
+                <li><a href="recipes/gnocchi.html">Gnocchi</a></li>
+            </ul>
         
     </body>
 </html>
