--- a/recipes/pasta-alla-norma.html
+++ b/recipes/pasta-alla-norma.html
@@ -41,5 +41,10 @@
                 </ol>
 
             <h3><em>Enjoy your dish!</em></h3>
+
+            <ul>
+                <li><a href="pasta-alla-norma.html">Back To Top</a></li>
+                <li><a href="../index.html">Back To Home Page</a></li>
+            </ul>
     </body>
 </html>
