--- a/recipes/gnocchi.html
+++ b/recipes/gnocchi.html
@@ -43,5 +43,10 @@
                 </ol>
 
             <h3><em>Enjoy your dish!</em></h3>
+
+            <ul>
+                <li><a href="gnocchi.html">Back To Top</a></li>
+                <li><a href="../index.html">Back To Home Page</a></li>
+            </ul>
     </body>
 </html>
