--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -39,5 +39,10 @@
                 </ol>
 
             <h3><em>Enjoy your dish!</em></h3>
+
+            <ul>
+                <li><a href="lasagna.html">Back To Top</a></li>
+                <li><a href="../index.html">Back To Home Page</a></li>
+            </ul>
     </body>
 </html>
